kubernetes/manifests/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: navidrome-data
              mountPath: /data
            - name: music-library
              mountPath: /music
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: music-library
          hostPath:
            path: /mnt/k8s-storage/navidrome_music
            type: Directory
