kubernetes/manifests/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: navidrome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: music.kacper-nxn.pl
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: navidrome-svc
            port: 
              number: 4533
